more workflow changes

--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -2,8 +2,8 @@ name: Update Standings
 
 on:
   schedule:
-    - cron: "*/30 * * * *"  # every 30 minutes
-  workflow_dispatch:        # allow manual runs
+    - cron: "*/30 * * * *"
+  workflow_dispatch:
 
 jobs:
   scrape:
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: main
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -26,10 +29,11 @@ jobs:
 
       - name: Commit and push
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
           git add public/standings.json
-          git commit -m "🔄 Update standings.json" || echo "No changes to commit"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git diff --cached --quiet && echo "No changes to commit" && exit 0
+
+          git commit -m "🔄 Update standings.json"
+          git push origin main
